alignment issue and marker x axis

--- a/src/overview/PortFolio/container/css/portfolio.css
+++ b/src/overview/PortFolio/container/css/portfolio.css
@@ -34,6 +34,10 @@
     color: rgb(56, 132, 217);
 }
 
+.width-80{
+    width: 80%;
+}
+
 .pd10 {
     padding: 10px 2px 10px 10%;
     box-sizing: border-box;
@@ -48,5 +52,8 @@
     }
     .pd10 {
         padding: 10px 2px 10px 2px !important;
+    }
+    .container{
+        width: 92%;
     }
 }
